# MedievalWar

./: .gitignore  CMakeLists.txt  README.md  run_test.sh
include/: data.h
src/: data.c  main.c
